Fix listener rule

--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -42,7 +42,7 @@ Resources:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
       Actions:
-        - TargetGroupArn: !Ref WebTargetGroup
+        - TargetGroupArn: !Ref ProxyTargetGroup
           Type: forward
       Conditions:
         - Field: host-header
