Add allowed network

--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -123,6 +123,7 @@ Resources:
         - Key: deregistration_delay.timeout_seconds
           Value: "15"
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_play_web" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
@@ -241,6 +242,7 @@ Resources:
         - Key: deregistration_delay.timeout_seconds
           Value: "15"
       Tags:
+        - { Key: Name, Value: !Sub "${RootStackName}_play_proxy" }
         - { Key: prx:meta:tagging-version, Value: "2021-04-07" }
         - { Key: prx:cloudformation:stack-name, Value: !Ref AWS::StackName }
         - { Key: prx:cloudformation:stack-id, Value: !Ref AWS::StackId }
@@ -307,6 +309,9 @@ Resources:
     Properties:
       ContainerDefinitions:
         - Cpu: 64
+          Environment:
+            - Name: ALLOWED
+              Value: 0.0.0.0/0
           Essential: true
           Image: ajoergensen/tinyproxy
           LogConfiguration:
