--- a/stacks/apps-100A.yml
+++ b/stacks/apps-100A.yml
@@ -41,6 +41,7 @@ Parameters:
 
   PlayEcrImageTag: { Type: String }
   PlaySecretsVersion: { Type: String }
+  PlayProxyEcrImageTag: { Type: String }
   PlaySharedAlbListenerRulePriorityPrefix: { Type: String }
 
   RadiotopiaTowerLambdaCodeS3ObjectKey: { Type: String }
@@ -171,6 +172,7 @@ Resources:
         SecretsBase: !Ref SecretsBase
         EcrImageTag: !Ref PlayEcrImageTag
         SecretsVersion: !Ref PlaySecretsVersion
+        ProxyEcrImageTag: !Ref PlayProxyEcrImageTag
         AlbListenerRulePriorityPrefix: !Ref PlaySharedAlbListenerRulePriorityPrefix
         SecretsStackName: !Ref SecretsStackName
         EnvironmentType: !Ref EnvironmentType
