--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -68,6 +68,7 @@ Parameters:
   IdSecretsVersion: { Type: String }
   PlayEcrImageTag: { Type: String }
   PlaySecretsVersion: { Type: String }
+  PlayProxyEcrImageTag: { Type: String }
   PublishEcrImageTag: { Type: String }
   PublishSecretsVersion: { Type: String }
   GroveEcrImageTag: { Type: String }
@@ -971,6 +972,7 @@ Resources:
 
         PlayEcrImageTag: !Ref PlayEcrImageTag
         PlaySecretsVersion: !Ref PlaySecretsVersion
+        PlayProxyEcrImageTag: !Ref PlayProxyEcrImageTag
         PlaySharedAlbListenerRulePriorityPrefix: !FindInMap [ALBListenerRulePriorityMap, Play, prefix]
 
         RadiotopiaTowerLambdaCodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
