Add Play proxy to legacy stack

--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -310,11 +310,10 @@ Resources:
     Properties:
       ContainerDefinitions:
         - Cpu: 64
-          Environment:
-            - Name: ALLOWED
-              Value: 0.0.0.0/0
           Essential: true
           Image: !Ref ProxyEcrImageTag
+          LinuxParameters:
+            InitProcessEnabled: true
           LogConfiguration:
             LogDriver: awslogs
             Options:
