--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -550,6 +550,7 @@ Resources:
           Fn::ImportValue: !Sub ${SecretsStackName}-SecretsBaseRegion
         PlayEcrImageTag: !Ref PlayEcrImageTag
         PlaySecretsVersion: !Ref PlaySecretsVersion
+        PlayProxyEcrImageTag: !Ref PlayProxyEcrImageTag
         ContainerMemory: !FindInMap [ECSReservationMap, !Ref EnvironmentType, FrontendMemory]
         ContainerCpu: !FindInMap [ECSReservationMap, !Ref EnvironmentType, FrontendCpu]
       Tags:
