Use proxy in staging only

--- a/stacks/container-apps/play.prx.org.yml
+++ b/stacks/container-apps/play.prx.org.yml
@@ -9,6 +9,7 @@ Mappings:
       name: play-express
 Conditions:
   CreateProductionResources: !Equals [!Ref EnvironmentType, Production]
+  IsStaging: !Equals [!Ref EnvironmentType, Staging]
 Parameters:
   # VPC ########################################################################
   VPC:
@@ -205,6 +206,7 @@ Resources:
 
   ProxyPathListenerRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
+    Condition: IsStaging
     Properties:
       Actions:
         - TargetGroupArn: !Ref ProxyTargetGroup
