Use lower rule priority in production

--- a/stacks/container-apps/play.prx.org.yml
+++ b/stacks/container-apps/play.prx.org.yml
@@ -219,7 +219,13 @@ Resources:
           Values:
             - /proxy*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "20"]]
+      Priority: !Join
+        - ""
+        - - !Ref PlatformALBListenerPriorityPrefix
+          - !If
+            - IsStaging
+            - 20
+            - 50
 
   ProxyTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
