Nerf Play proxy alarm

--- a/stacks/container-apps/play.prx.org.yml
+++ b/stacks/container-apps/play.prx.org.yml
@@ -218,13 +218,7 @@ Resources:
           Values:
             - /proxy*
       ListenerArn: !Ref PlatformALBHTTPSListenerArn
-      Priority: !Join
-        - ""
-        - - !Ref PlatformALBListenerPriorityPrefix
-          - !If
-            - IsStaging
-            - 20
-            - 50
+      Priority: !Join ["", [!Ref PlatformALBListenerPriorityPrefix, "20"]]
 
   ProxyTargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
@@ -266,7 +260,7 @@ Resources:
       Namespace: AWS/ApplicationELB
       Period: 60
       Statistic: Sum
-      Threshold: 0
+      Threshold: 3
       TreatMissingData: notBreaching
 
   ProxyEcsService:
