Route through params

--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -83,6 +83,7 @@ Parameters:
   DovetailCountsLambdaCodeS3ObjectKey: { Type: String }
   DovetailTrafficLambdaCodeS3ObjectKey: { Type: String }
   DovetailCdnArrangerCodeS3ObjectKey: { Type: String }
+  DovetailCdnOriginRequestCodeS3ObjectKey: { Type: String }
   ProxyPrxOrgCodeS3ObjectKey: { Type: String }
   BetaPrxOrgArchiveS3ObjectKey: { Type: String }
   BetaPrxOrgCloudFrontOai: { Type: String }
@@ -272,6 +273,7 @@ Resources:
         DovetailCountsLambdaCodeS3ObjectKey: !Ref DovetailCountsLambdaCodeS3ObjectKey
         DovetailTrafficLambdaCodeS3ObjectKey: !Ref DovetailTrafficLambdaCodeS3ObjectKey
         DovetailCdnArrangerCodeS3ObjectKey: !Ref DovetailCdnArrangerCodeS3ObjectKey
+        DovetailCdnOriginRequestCodeS3ObjectKey: !Ref DovetailCdnOriginRequestCodeS3ObjectKey
         AnalyticsIngestLambdaCodeS3ObjectKey: !Ref AnalyticsIngestLambdaCodeS3ObjectKey
         RadiotopiaTowerLambdaCodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
       Tags:
