--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -151,3 +151,12 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
+Outputs:
+  ArrangerFunctionName:
+    Value: !Ref DovetailCdnArrangerFunction
+  ArrangerFunctionArn:
+    Value: !GetAtt DovetailCdnArrangerFunction.Arn
+  ArrangerBucketName:
+    Value: !Ref DtCdnArrangerWorkspaceBucket
+  ArrangerBucketArn:
+    Value: !GetAtt DtCdnArrangerWorkspaceBucket.Arn
