Block public access

--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -32,6 +32,11 @@ Resources:
         Rules:
           - ExpirationInDays: 30
             Status: Enabled
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: true
+        BlockPublicPolicy: true
+        IgnorePublicAcls: true
+        RestrictPublicBuckets: true
       Tags:
         - Key: Project
           Value: Dovetail
