TODO the origin identity

--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -46,6 +46,19 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
+  # BucketPolicy:
+  #   Type: AWS::S3::BucketPolicy
+  #   Properties:
+  #     Bucket: !Ref DtCdnArrangerWorkspaceBucket
+  #     PolicyDocument:
+  #       Version: "2012-10-17"
+  #       Statement:
+  #         - Action: s3:GetObject
+  #           Effect: Allow
+  #           Principal:
+  #             AWS: !Ref TODOHowToGetThisThing?
+  #           Resource: !Sub arn:aws:s3:::${DtCdnArrangerWorkspaceBucket}/*
+  #           Sid: Grant read access to a CloudFront Origin Identity
   DovetailCdnArrangerBinaryLayer:
     Type: AWS::Lambda::LayerVersion
     Properties:
