Also - basic execution

--- a/stacks/serverless/dovetail-cdn-origin-request.yml
+++ b/stacks/serverless/dovetail-cdn-origin-request.yml
@@ -61,6 +61,8 @@ Resources:
                 Resource:
                   # TODO: multiple region arrangers
                   - !Ref ArrangerBucketArn
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
       Tags:
         - Key: Project
           Value: Dovetail
