--- a/stacks/root.yml
+++ b/stacks/root.yml
@@ -83,6 +83,7 @@ Parameters:
   DovetailCountsLambdaCodeS3ObjectKey: { Type: String }
   DovetailTrafficLambdaCodeS3ObjectKey: { Type: String }
   DovetailCdnArrangerCodeS3ObjectKey: { Type: String }
+  DovetailCdnArrangerCloudFrontOai: { Type: String }
   DovetailCdnOriginRequestCodeS3ObjectKey: { Type: String }
   ProxyPrxOrgCodeS3ObjectKey: { Type: String }
   BetaPrxOrgArchiveS3ObjectKey: { Type: String }
@@ -273,6 +274,7 @@ Resources:
         DovetailCountsLambdaCodeS3ObjectKey: !Ref DovetailCountsLambdaCodeS3ObjectKey
         DovetailTrafficLambdaCodeS3ObjectKey: !Ref DovetailTrafficLambdaCodeS3ObjectKey
         DovetailCdnArrangerCodeS3ObjectKey: !Ref DovetailCdnArrangerCodeS3ObjectKey
+        DovetailCdnArrangerCloudFrontOai: !Ref DovetailCdnArrangerCloudFrontOai
         DovetailCdnOriginRequestCodeS3ObjectKey: !Ref DovetailCdnOriginRequestCodeS3ObjectKey
         AnalyticsIngestLambdaCodeS3ObjectKey: !Ref AnalyticsIngestLambdaCodeS3ObjectKey
         RadiotopiaTowerLambdaCodeS3ObjectKey: !Ref RadiotopiaTowerLambdaCodeS3ObjectKey
