--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -8,6 +8,8 @@ Parameters:
     Type: String
   CodeS3ObjectKey:
     Type: String
+  CloudFrontOai:
+    Type: String
   EnvironmentType:
     Type: String
   ArrangementsDynamodbAccessRole:
@@ -46,19 +48,19 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
-  # BucketPolicy:
-  #   Type: AWS::S3::BucketPolicy
-  #   Properties:
-  #     Bucket: !Ref DtCdnArrangerWorkspaceBucket
-  #     PolicyDocument:
-  #       Version: "2012-10-17"
-  #       Statement:
-  #         - Action: s3:GetObject
-  #           Effect: Allow
-  #           Principal:
-  #             AWS: !Ref TODOHowToGetThisThing?
-  #           Resource: !Sub arn:aws:s3:::${DtCdnArrangerWorkspaceBucket}/*
-  #           Sid: Grant read access to a CloudFront Origin Identity
+  BucketPolicy:
+    Type: AWS::S3::BucketPolicy
+    Properties:
+      Bucket: !Ref DtCdnArrangerWorkspaceBucket
+      PolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Action: s3:GetObject
+            Effect: Allow
+            Principal:
+              AWS: !Ref CloudFrontOai
+            Resource: !Sub arn:aws:s3:::${DtCdnArrangerWorkspaceBucket}/*
+            Sid: Grant read access to a CloudFront Origin Identity
   DovetailCdnArrangerBinaryLayer:
     Type: AWS::Lambda::LayerVersion
     Properties:
