--- a/stacks/serverless/root.yml
+++ b/stacks/serverless/root.yml
@@ -35,6 +35,8 @@ Parameters:
     Type: String
   DovetailCdnArrangerCodeS3ObjectKey:
     Type: String
+  DovetailCdnArrangerCloudFrontOai:
+    Type: String
   DovetailCdnOriginRequestCodeS3ObjectKey:
     Type: String
   AnalyticsIngestLambdaCodeS3ObjectKey:
@@ -165,6 +167,7 @@ Resources:
         CodeS3Bucket:
           Fn::ImportValue: !Sub ${InfrastructureStorageStackName}-InfrastructureApplicationCodeBucket
         CodeS3ObjectKey: !Ref DovetailCdnArrangerCodeS3ObjectKey
+        CloudFrontOai: !Ref DovetailCdnArrangerCloudFrontOai
         EnvironmentType: !Ref EnvironmentType
         ArrangementsDynamodbAccessRole: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_ACCESS_ROLE
         ArrangementsDynamodbRegion: !Sub /prx/${EnvironmentTypeAbbreviation}/dovetail-cdn-arranger/ARRANGEMENTS_DDB_REGION
