Just log to prx-dovetail for now

--- a/cdn/dovetail3-cdn.yml
+++ b/cdn/dovetail3-cdn.yml
@@ -224,7 +224,11 @@ Resources:
         Enabled: true
         HttpVersion: http2
         IPV6Enabled: true
-        # TODO: cloudfront logging to kinesis with an S3 backup
+        Logging:
+          # TODO: non us-east-1 bucket
+          Bucket: prx-dovetail.s3.amazonaws.com
+          IncludeCookies: false
+          Prefix: !Sub "dt3-logs-${EnvironmentTypeAbbreviation}"
         Origins:
           # TODO: multiple dovetail-cdn-arranger S3 bucket origins, in case
           # lambda executions fail for some reason
