Some logs would be nice

--- a/stacks/serverless/dovetail-cdn-arranger.yml
+++ b/stacks/serverless/dovetail-cdn-arranger.yml
@@ -123,6 +123,7 @@ Resources:
                 Resource:
                   - !Sub ${DtCdnArrangerWorkspaceBucket.Arn}/*
       ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
         - arn:aws:iam::aws:policy/CloudWatchLambdaInsightsExecutionRolePolicy
       Tags:
         - Key: Project
@@ -133,6 +134,11 @@ Resources:
           Value: !Ref AWS::StackName
         - Key: prx:cloudformation:stack-id
           Value: !Ref AWS::StackId
+  DovetailCdnArrangerLogGroup:
+    Type: AWS::Logs::LogGroup
+    Properties:
+      LogGroupName: !Sub /aws/lambda/${DovetailCdnArrangerFunction}
+      RetentionInDays: 14
   DovetailCdnArrangerFunction:
     Type: AWS::Lambda::Function
     Properties:
