Match comments to filenames

--- a/stacks/apps/s3-signing.yml
+++ b/stacks/apps/s3-signing.yml
@@ -1,4 +1,4 @@
-# stacks/serverless/upload.prx.org.yml
+# stacks/apps/s3-signing.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
