--- a/stacks/apps/augury.yml
+++ b/stacks/apps/augury.yml
@@ -1,4 +1,4 @@
-# stacks/provisioned/metrics.yml
+# stacks/apps/augury.yml
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
 
