--- a/stacks/apps/publish.yml
+++ b/stacks/apps/publish.yml
@@ -2,7 +2,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 
 Description: >-
-  Creates an ECS service for Play, along with target group and listener rule
+  Creates an ECS service for Publish, along with target group and listener rule
   for the shared ALB. Also creates an S3 bucket that Publish uses to upload
   user content to, along with a CloudFront distribution that provides public
   access to contents of the bucket.
