--- a/stacks/apps/play.yml
+++ b/stacks/apps/play.yml
@@ -4,7 +4,8 @@ Transform: AWS::Serverless-2016-10-31
 
 Description: >-
   Creates an ECS service for Play, along with target group and listener rule
-  for the shared ALB.
+  for the shared ALB. Also includes a standalone RSS proxy server, to work
+  around iframe CORS issues.
 
 Parameters:
   kContainerName:
@@ -140,9 +141,9 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Metrics v2][ALB][Error] Target 5XX" # TODO
+      AlarmName: "[Play v2][ALB][Error] Target 5XX" # TODO
       AlarmDescription: >- # TODO
-        5XX server errors originating from the metrics target group exceeded 0
+        5XX server errors originating from the play target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
@@ -259,9 +260,9 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Metrics v2][ALB][Error] Proxy Target 5XX" # TODO
+      AlarmName: "[Play v2][ALB][Error] Proxy Target 5XX" # TODO
       AlarmDescription: >- # TODO
-        5XX server errors originating from the metrics target group exceeded 0
+        5XX server errors originating from the play proxy target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
