--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -79,9 +79,9 @@ Resources:
     Type: AWS::CloudWatch::Alarm
     Condition: IsProduction
     Properties:
-      AlarmName: "[Metrics v2][ALB][Error] Target 5XX" # TODO
+      AlarmName: "[Castle v2][ALB][Error] Target 5XX" # TODO
       AlarmDescription: >- # TODO
-        5XX server errors originating from the metrics target group exceeded 0
+        5XX server errors originating from the castle target group exceeded 0
       ComparisonOperator: GreaterThanThreshold
       Dimensions:
         - Name: LoadBalancer
