Use configured castle endpoint

--- a/stacks/apps/castle.yml
+++ b/stacks/apps/castle.yml
@@ -186,6 +186,8 @@ Resources:
               Value: !Ref SecretsVersion
             - Name: AWS_DEFAULT_REGION
               Value: !Ref AWS::Region
+            - Name: PG_HOST
+              Value: !Ref CastleRdsPostgresqlEndpoint
             - Name: REDIS_HOST
               Value: !GetAtt RedisReplicationGroup.PrimaryEndPoint.Address
             - Name: REDIS_PORT
